# openabc

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
docs/: handoff-rendering-while-streaming.md  multibot-gap-inventory.json  multibot-integration-design.md
docs/adr/: 0001-tech-stack.md
frontend/: .gitignore  package.json  verify-dist.sh  vite-plugin-katex-inline-fonts.js  vite.config.js
frontend/src/: App.svelte  app.css  avatar.js  avatar.test.js  channels.js  channels.test.js  main.js  membership.js  membership.test.js
spike/: measure.sh  measurements.json
spike/backend/: Cargo.toml
spike/backend/src/: lib.rs  main.rs
spike/backend/tests/: ws_push_integration.rs
spike/frontend/src/: App.svelte  avatar.js  avatar.test.js
src/: lib.rs  main.rs  native.rs  schema.rs  stub_core.rs
tests/: agent_routing.rs  native_integration.rs  oab_stub_harness.rs
