[package]
name = "openabc"
version = "0.1.0"
edition = "2021"

[lib]
name = "openabc"
path = "src/lib.rs"

[[bin]]
name = "openabc"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
