[package]
name = "openabc-ws-spike"
version = "0.1.0"
edition = "2021"

[lib]
name = "openabc_ws_spike"
path = "src/lib.rs"

[[bin]]
name = "openabc-ws-spike"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-tungstenite = "0.29"
futures-util = "0.3"
serde_json = "1"
